infra/terraform/k8s-manifests/ctdl-xtra/ctdl-xtra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctdl-xtra-web
  namespace: ctdl-xtra
  labels:
    app: ctdl-xtra-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ctdl-xtra-web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ctdl-xtra-web
        workload: ctdl-xtra
    spec:
      nodeSelector:
        workload: ctdl-xtra
      tolerations:
        - key: workload
          operator: Equal
          value: ctdl-xtra
          effect: NoSchedule
      serviceAccountName: ctdl-xtra
      containers:
        - name: web
          image: 996810415034.dkr.ecr.us-east-1.amazonaws.com/ctdl-xtra-app:release
          imagePullPolicy: Always
          command: ["pm2-runtime", "/app/dist/server/src/server.js"]
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /up
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /up
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: "500m"
              memory: "2Gi"
            limits:
              cpu: "2000m"
              memory: "4Gi"
          volumeMounts:
            - name: extraction-storage
              mountPath: /app/storage
      volumes:
        - name: extraction-storage
          persistentVolumeClaim:
            claimName: ctdl-xtra-storage
