infra/terraform/k8s-manifests/ctdl-xtra/ctdl-xtra/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctdl-xtra-worker
  namespace: ctdl-xtra
  labels:
    app: ctdl-xtra-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ctdl-xtra-worker
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ctdl-xtra-worker
        workload: ctdl-xtra
    spec:
      nodeSelector:
        workload: ctdl-xtra
      tolerations:
        - key: workload
          operator: Equal
          value: ctdl-xtra
          effect: NoSchedule
      serviceAccountName: ctdl-xtra
      containers:
        - name: worker
          image: 996810415034.dkr.ecr.us-east-1.amazonaws.com/ctdl-xtra-worker:release
          imagePullPolicy: Always
          command: ["runuser", "-u", "pptruser", "--", "pm2-runtime", "/app/dist/server/src/worker.js"]
          resources:
            requests:
              cpu: "1000m"
              memory: "2Gi"
            limits:
              cpu: "3000m"
              memory: "4Gi"
          volumeMounts:
            - name: extraction-storage
              mountPath: /app/storage
      volumes:
        - name: extraction-storage
          persistentVolumeClaim:
            claimName: ctdl-xtra-storage
