infra/terraform/k8s-manifests/ctdl-xtra/ctdl-xtra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ctdl-xtra-web
  namespace: ctdl-xtra
spec:
  selector:
    app: ctdl-xtra-web
  ports:
    - name: http
      port: 80
      targetPort: 3000
